Renamed to PRom

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 author: Nickster258
 api-version: 1.13
 version: 1.0
-main: org.stonecipher.WirelessRedstone
-name: WirelessRedstone
+main: org.stonecipher.PRom
+name: PRom
