--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.stonecipher</groupId>
-    <artifactId>WirelessRedstone</artifactId>
+    <artifactId>PRom</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
